# flux

./: flake.nix  package-lock.json  package.json  result
daemon/: .gitignore  pyproject.toml
daemon/src/daemon/: __init__.py  app.py
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/background/: background.ts
src/components/: Select.svelte  UserDropdown.svelte
src/icons/: CloseIcon.svelte  HomeIcon.svelte  MaximizeIcon.svelte  MinusIcon.svelte  RestoreIcon.svelte  UserIcon.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/settings/: +page.svelte
